Fix: Moved body overflow from inline to base sass

--- a/Cards_type/src/style/base.sass
+++ b/Cards_type/src/style/base.sass
@@ -12,3 +12,4 @@ body
     font-size: 2rem
     line-height: 1.5
     background: var(--body-background) // Shows thorugh during "over sibling hover"
+    overflow: hidden
